--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -44,7 +44,7 @@
                         </ul>
 
                         <form class="form-inline my-2 my-lg-0">
-                            <table>
+                            <table class="table-style">
                                 <td>
                                     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
                                 </td>
