--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -143,3 +143,22 @@ nav a {
 .table-style{
     border-collapse: inherit;
 }
+
+.container-2{
+  padding-bottom: 20px;
+  background: transparent url('../images/3254309.jpg') no-repeat;
+  background-size: cover;
+  background-position: bottom;
+}
+
+.detail-list{
+  padding: 20px;
+  border: 1px solid white ;
+  border-style: groove;
+  background: rgba(255, 255, 255, 0.788235294117647);
+  margin-top: 20px;
+  border-radius: 10px 10px 9px 10px;
+  -moz-border-radius: 10px 10px 9px 10px;
+  -webkit-border-radius: 10px 10px 9px 10px;
+  border: 0px solid #000000;
+}
