--- a/templates/auth/contact_ver.html
+++ b/templates/auth/contact_ver.html
@@ -54,6 +54,13 @@
                                   </td>
                                 </tr>
                             </table>
+                            <div class="form-group back-b" style="text-align:center;">
+                                <a href="{% url 'listcontact' %}">
+                                    <button type="button" class="btn btn-outline-info">Listado
+                                        <i class="material-icons left">arrow_back</i>
+                                    </button>
+                                </a>
+                            </div>
                         </form>
                     </div>
                 </div>
