--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -46,10 +46,10 @@
                           {% csrf_token %}
                             <table class="table-style">
                               <td>
-                                  <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name='search' required>
+                                  <input class="form-control mr-sm-2" type="search" placeholder="Nombre" aria-label="Search" name='search' required>
                               </td>
                               <td>
-                                  <buttom i class="material-icons color-icon" type="submit">search</i></buttom>
+                                  <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
                               </td>
                             </table>
                         </form>
