--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -46,7 +46,7 @@
                           {% csrf_token %}
                             <table class="table-style">
                               <td>
-                                  <input class="form-control mr-sm-2" type="search" placeholder="Nombre" aria-label="Search" name='search' required>
+                                  <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search" name='search' required>
                               </td>
                               <td>
                                   <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
