--- a/templates/registration/account_activation.html
+++ b/templates/registration/account_activation.html
@@ -5,11 +5,11 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Confirnación</title>
+        <title>Confirmación</title>
     </head>
     <body>
         <div class="container">
-            <h4 class="m-5">
+            <h4 class="m-5" style="text-align:center;">
                 Estimado(a) {{ username }}! Hemos enviado un correo electrónico,
                 para que finalice el proceso de registro
             </h4>
