--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel = "shortcut icon" href = "{% static 'icon.ico'%}">
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
