--- a/templates/auth/contact_list.html
+++ b/templates/auth/contact_list.html
@@ -32,7 +32,7 @@
                                         <td>{{ data.dependencia }}</td>
                                         <td>{{ data.cargo }}</td>
                                         <td>
-                                            <a align="center"  href="http://localhost:8000/media/{{ data.archivo }}">
+                                            <a align="center"  href="/media/{{ data.archivo }}">
                                                 <i class="material-icons">picture_as_pdf</i>
                                             </a>
                                         </td>
