--- a/templates/auth/contact_ver.html
+++ b/templates/auth/contact_ver.html
@@ -48,7 +48,7 @@
                                 <tr>
                                   <td><strong>Anexo</strong></td>
                                   <td>
-                                      <a  target="_blank" href="http://localhost:8000/media/{{ contacto.archivo }}">
+                                      <a  target="_blank" href="/media/{{ contacto.archivo }}">
                                           <i class="material-icons">picture_as_pdf</i>
                                       </a>
                                   </td>
